Add a way to read from standard entry