@@ -4,21 +4,20 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class EntryFileContainer {
-    public static List<String> entryFromFile;
+    public static List<String> entryFromFile = new ArrayList<>();
 
-    public EntryFileContainer() {
-        this.entryFromFile = new ArrayList<>();
-    }
-
-    public void addEntry(String entry) {
+    public static void addEntry(String entry) {
         entryFromFile.add(entry);
     }
 
     public static String getFirstEntry() {
-        return entryFromFile.getFirst();
+        if (entryFromFile.isEmpty()) {
+            return null;
+        }
+        return entryFromFile.get(0);
     }
 
     public static void removeFirstEntry() {
-        entryFromFile.removeFirst();
+        entryFromFile.remove(0);
     }
 }
